[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imagin"
version = "2.1.1"
authors = [
  { name="Andrey Sukhanov", email="sukhanov@bnl.gov" },
]
description = "Interactive viewer and analyzer for streamed images"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyqtgraph>=0.14",
]
[project.urls]
"Homepage" = "https://github.com/ASukhanov/imagin"
"Bug Tracker" = "https://github.com/ASukhanov/imagin"
